# cpp-gobang-ai-learning

./: CMakeLists.txt  Gobang.pro  README.md  board.cpp  board.h  coordinate.cpp  coordinate.h  dialogofabout.cpp  dialogofabout.h  dialogofabout.ui  gobangAI.cpp  gobangAI.h  gobangai.cpp  gobangai.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
